# Learning-ROS

husky_navigation/: frames.gv  object.urdf
husky_navigation/get_pose/: CMakeLists.txt  package.xml
husky_navigation/get_pose/launch/: get_pose.launch
husky_navigation/get_pose/src/: get_pose_service.py
husky_navigation/initialize_particles/src/: init_particles_caller.py  square_move.py
husky_navigation/make_plan/src/: make_plan_caller.py
husky_navigation/my_amcl_launcher/launch/: .my_amcl_launch.launch.swp  change_map.launch  my_amcl_launch.launch
husky_navigation/my_amcl_launcher/params/: my_amcl_params.yml
husky_navigation/my_move_base_launcher/launch/: my_move_base_launch_2.launch
husky_navigation/my_move_base_launcher/params/: my_common_costmap_params.yaml  my_global_costmap_params.yaml  my_local_costmap_params.yaml  my_move_base_params.yaml
husky_navigation/send_goals/src/: send_goal_client.py
kobuki_navigation/: frames.gv  frames_2.gv
kobuki_navigation/get_map_data/: package.xml
kobuki_navigation/get_map_data/launch/: get_map_data.launch
kobuki_navigation/get_map_data/src/: call_map_service.py
kobuki_navigation/my_mapping_launcher/: package.xml
kobuki_navigation/provide_map/: my_map.pgm  package.xml
kobuki_navigation/provide_map/launch/: serve_map.launch
kobuki_navigation/provide_transform/: CMakeLists.txt  package.xml
robot_urdf/: CMakeLists.txt  package.xml
sphero-ros_basics/: README.md
sphero-ros_basics/my_sphero_actions/: CMakeLists.txt  package.xml
sphero-ros_basics/my_sphero_main/: CMakeLists.txt  package.xml
(+21 files in other folders)
