<?xml version="1.0"?>
<package format="2">
  <name>robot_urdf</name>
  <version>0.0.0</version>
  <description>This package holds all urdf, sdf, gazebo models and worlds used in the robot project. </description>

  <!-- All Extra omments has been removed -->
  <maintainer email="daniel.2022development@gmail.com">Daniel Adejumo</maintainer>


  <license>BSD</license>


  <author email="daniel.2022development@gmail.com">Daniel Adejumo</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
